--- a/infrabuildspec.yaml
+++ b/infrabuildspec.yaml
@@ -100,7 +100,7 @@ Resources:
                 MinimumHealthyPercent: 50
             DesiredCount: 2
             LaunchType: "EC2"
-            Role: "cloudformationdevrole"
+            Role: "ECSRoleForCF"
 
     TaskDefinition:
         Type: AWS::ECS::TaskDefinition
