--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,6 +34,7 @@ phases:
       - node -v
       - npm -v
       - printenv
+      - sudo yum install -y nfs-utils
   pre_build:
     commands:
       - echo install dependencies and running unit test cases
@@ -80,6 +81,12 @@ phases:
       - echo Writing image definitions file...
       - printf '[{"name":"%s","imageUri":"%s"}]' $E2_ECS_SERVICE_CONTAINER_NAME $E2_AWS_ACCOUNT_ID.dkr.ecr.$E2_AWS_ECR_REGION.amazonaws.com/$E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
+      - mkdir /efs
+      - mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 fs-42fa0c7b.efs.ap-southeast-2.amazonaws.com: /efs
+      - df -h
+      - ls -ltr /efs
+      - cp imagedefinitions.json /efs
+      - ls -ltr /efs
 artifacts:
   files:
     - imagedefinitions.json
