--- a/buildspec.yml
+++ b/buildspec.yml
@@ -82,7 +82,7 @@ phases:
       - printf '[{"name":"%s","imageUri":"%s"}]' $E2_ECS_SERVICE_CONTAINER_NAME $E2_AWS_ACCOUNT_ID.dkr.ecr.$E2_AWS_ECR_REGION.amazonaws.com/$E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
       - mkdir /efs
-      - $(mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 fs-42fa0c7b.efs.ap-southeast-2.amazonaws.com: /efs)
+      - mount -t nfs4 -o "nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 fs-42fa0c7b.efs.ap-southeast-2.amazonaws.com: /efs"
       - df -h
       - ls -ltr /efs
       - cp imagedefinitions.json /efs
