--- a/buildspec.yml
+++ b/buildspec.yml
@@ -81,7 +81,8 @@ phases:
       - echo Writing image definitions file...
       - printf '[{"name":"%s","imageUri":"%s"}]' $E2_ECS_SERVICE_CONTAINER_NAME $E2_AWS_ACCOUNT_ID.dkr.ecr.$E2_AWS_ECR_REGION.amazonaws.com/$E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
-      - mountefs.sh
+      - ls ltr $CODEBUILD_SRC_DIR/
+      - $CODEBUILD_SRC_DIR/mountefs.sh
 artifacts:
   files:
     - imagedefinitions.json
