--- a/buildspec.yml
+++ b/buildspec.yml
@@ -82,6 +82,7 @@ phases:
       - printf '[{"name":"%s","imageUri":"%s"}]' $E2_ECS_SERVICE_CONTAINER_NAME $E2_AWS_ACCOUNT_ID.dkr.ecr.$E2_AWS_ECR_REGION.amazonaws.com/$E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
       - ls -ltr $CODEBUILD_SRC_DIR/
+      - chmod +x $CODEBUILD_SRC_DIR/mountefs.sh
       - $CODEBUILD_SRC_DIR/mountefs.sh
 artifacts:
   files:
