--- a/buildspec.yml
+++ b/buildspec.yml
@@ -88,6 +88,7 @@ phases:
       - mkdir -p /efs/$E2_REPO_NAME
       - echo $E2_AWS_ACCOUNT_ID >> /efs/$E2_REPO_NAME/.env
       - cat /efs/$E2_REPO_NAME/.env
+      - ls -ltr /efs/*
 artifacts:
   files:
     - imagedefinitions.json
